--- a/data/projects.json
+++ b/data/projects.json
@@ -1549,7 +1549,7 @@
       "id": 107,
       "year": 2013,
       "month": 9,
-      "url": "2013-09-justareflektor.png",
+      "url": "2013-09-justareflektor.jpg",
       "href": "http://justareflektor.com/",
       "concentration": "photography",
       "format": "interactive",
@@ -1635,7 +1635,7 @@
       "id": 113,
       "year": 2014,
       "month": 1,
-      "url": "2014-01-australia-day.png",
+      "url": "2014-01-australia-day.jpg",
       "concentration": "illustration",
       "format": "moving",
       "impact": 1,
@@ -2066,7 +2066,7 @@
       "id": 143,
       "year": 2015,
       "month": 6,
-      "url": "2015-06-fog-beast-fundraiser.png",
+      "url": "2015-06-fog-beast-fundraiser.jpg",
       "concentration": "photography",
       "format": "static",
       "impact": 1,
@@ -2124,7 +2124,7 @@
       "id": 147,
       "year": 2015,
       "month": 8,
-      "url": "2015-08-vrse-web-player.png",
+      "url": "2015-08-vrse-web-player.jpg",
       "href": "http://vrse.com/watch/invasion-sneak-peek/",
       "concentration": "generative",
       "format": "interactive",
@@ -2139,7 +2139,7 @@
       "id": 148,
       "year": 2015,
       "month": 9,
-      "url": "2015-09-jonobr1-swag.png",
+      "url": "2015-09-jonobr1-swag.jpg",
       "concentration": "typography",
       "format": "static",
       "impact": 9,
@@ -2255,7 +2255,7 @@
       "id": 156,
       "year": 2016,
       "month": 3,
-      "url": "2016-03-dissonance.png",
+      "url": "2016-03-dissonance.jpg",
       "concentration": "generative",
       "format": "static",
       "impact": 7,
